# KROMA

./: .gitignore  .gitmodules  CMakeLists.txt  CompileShaders.cmake
Resources/Shaders/: 2d.frag  2d.vert  composite.frag  composite.vert  particles.comp
Source/: Arena.h  Base.h  Buffers.c  Buffers.h  GraphicsPipeline.c  GraphicsPipeline.h  Main.c  Math.h  ParticleSystem.c  ParticleSystem.h  Renderer.c  Renderer.h  Shader.c  Shader.h  Swapchain.c  Swapchain.h  Window.c  Window.h
